Cambios en el texto de la galeria

--- a/index.html
+++ b/index.html
@@ -105,56 +105,57 @@
     <section class="gallery__container" id="gallery">
       <article class="gallery__item">
         <img src="/img/galeria1-jc.jpg" alt="" />
-        <div class="gallery__title">
+        <!-- <div class="gallery__title">
           <h2>Juan cruz 1</h2>
           <a href="#image1">
             <i class="fa fa-share"></i>
           </a>
-        </div>
+        </div> -->
       </article>
 
       <article class="gallery__item">
         <img src="/img/galeria2-jc.jpg" alt="" />
 
-        <div class="gallery__title">
+        <!-- <div class="gallery__title">
           <h2>Juan cruz 2</h2>
           <a href="#image2"><i class="fa fa-share gallery__title-size"></i></a>
-        </div>
+        </div> -->
       </article>
 
       <article class="gallery__item">
         <img src="/img/galeria3-jc.jpg" alt="" />
 
-        <div class="gallery__title">
+        <!-- <div class="gallery__title">
           <h2>Juan cruz 3</h2>
           <a href="#image3"><i class="fa fa-share"></i></a>
-        </div>
+        </div> -->
       </article>
 
       <article class="gallery__item">
         <img src="/img/galeria4-jc.jpg" alt="" class="encuadrar"/>
-        <div class="gallery__title">
+        
+        <!-- <div class="gallery__title">
           <h2>Juan cruz 4</h2>
           <a href="#image4"><i class="fa fa-share"></i></a>
-        </div>
+        </div> -->
       </article>
 
       <article class="gallery__item">
         <img src="/img/galeria5-jc.jpg" alt="" class="encuadrar" />
 
-        <div class="gallery__title">
+        <!-- <div class="gallery__title">
           <h2>Juan cruz 5</h2>
           <a href="#image5"><i class="fa fa-share"></i></a>
-        </div>
+        </div> -->
       </article>
 
       <article class="gallery__item">
         <img src="/img/galeria6-jc.jpg" alt="" class="encuadrar" />
 
-        <div class="gallery__title">
+        <!-- <div class="gallery__title">
           <h2>Juan cruz 6</h2>
           <a href="#image6"><i class="fa fa-share gallery__title-size"></i></a>
-        </div>
+        </div> -->
       </article>
     </section>
 
